# dsa-faculty-service

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  Makefile  README.md  README_DEV.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  openapi.yaml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_patents_to_persons.py  0003_add_nlp_fields.py  0004_publication_extras_columns.py  0005_add_theses.py
app/: admin.py  admin_auth.py  config.py  database.py  experts.py  main.py  models.py  publication_enrichment.py  routes.py  scheduler.py  schemas.py  ui.py  vector_search.py
app/api/: deps.py
app/api/v1/: admin.py  health.py  meta.py  news.py  persons.py  publications.py  router.py  (+1 more)
app/models/: __init__.py  authorship.py  campus.py  course.py  person.py  publication.py  scrape_job.py
app/nlp/: __init__.py  __main__.py  cli.py  embedder.py  extractor.py  lemmatize.py  person_context.py  stopwords.py
app/schemas/: admin.py  common.py  course.py  envelopes.py  news.py  pagination.py  person.py  publication.py  search.py
app/scraper/: __main__.py  client.py  crawler.py  ingest.py  normalizers.py  parser.py  profile.py  publications.py  theses.py  theses_cli.py
app/services/: ingest.py  mapping.py  pagination.py  publication_enrichment.py
data/: hse_persons.ipynb
deploy/: Caddyfile
docs/: html_structure_analysis.md
notes/: README.md  embedder_validation.txt  extracted_interests_sample.md  extractor_iterations.md  extractor_v1_sample.txt  extractor_v2_sample.txt  score_distribution_12k.txt  score_distribution_5k.txt  score_distribution_full.txt  score_distribution_sample30.txt  score_distribution_with_courses.txt  scrape_full_summary.md
scripts/: analyze_extracted_interests.py  analyze_fixtures.py  backfill_publication_extras.py  clean_existing_tags.py  fetch_fixtures.py  fixtures_manifest.py  run_scraper_local.py  sanitize_fixtures.py  seed_from_sample.py  sync_embeddings_to_prod.py  test_embedder.py  test_extractor.py  test_matched_topics.py
templates/: admin.html  admin_job.html  base.html  home.html  persons.html  profile.html  publications.html
tests/: conftest.py  test_normalizers.py  test_parser_fixtures.py  test_publication_enrichment.py  test_scraper.py  test_smoke.py
tests/fixtures/: manifest.yaml
(+27 files in other folders)
