[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa-faculty-service"
version = "0.4.0"
description = "DSA Faculty Service — faculty-data microservice of the Digital Student Assistant platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ivan Agafoshin", email = "ivan@agafoshin.com" }]
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "SQLAlchemy>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "requests>=2.32",
    "lxml>=5.2",
    "python-dateutil>=2.9",
    "orjson>=3.10",
    "pgvector>=0.3",
    "jinja2>=3.1",
]

# Тяжёлые NLP-зависимости. Нужны только для локального enrich-CLI
# (`python -m app.nlp enrich-persons` и т.п.). Прод-Dockerfile их не ставит
# — там они просто не нужны (CLI запускается с воркстейшна разработчика).
[project.optional-dependencies]
nlp = [
    "torch>=2.2",
    "sentence-transformers>=3.0",
    "spacy>=3.7",
    "keybert>=0.8",
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["scripts*", "alembic*"]
